base-application/ingress/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: ui
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nathan_tinius
    alb.ingress.kubernetes.io/certificate-arn: CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.order: '10'
spec:
  ingressClassName: alb
  rules:
    - host: URL
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui
              port:
                number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecos
  namespace: ecos
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nathan_tinius
    alb.ingress.kubernetes.io/certificate-arn: CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.order: "9"
spec:
  ingressClassName: alb
  rules:
    - host: URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecos
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nathan_tinius
    alb.ingress.kubernetes.io/certificate-arn: CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: URL
      http:
        paths:
          - path: /api/sources
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/destinations
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/authentications
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/field-maps
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/webhooks
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/workspaces
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/eventbrite
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/vimeo
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/youtube
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/lever
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/webflow
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/connections
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/calendars
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
          - path: /api/ecos
            pathType: Prefix
            backend:
              service:
                name: apps
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  namespace: users
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nathan_tinius
    alb.ingress.kubernetes.io/certificate-arn: CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: URL
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscriptions
  namespace: subscriptions
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nathan_tinius
    alb.ingress.kubernetes.io/certificate-arn: CERTIFICATE_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: URL
      http:
        paths:
          - path: /api/checkout
            pathType: Prefix
            backend:
              service:
                name: subscriptions
                port:
                  number: 80
          - path: /api/wallet
            pathType: Prefix
            backend:
              service:
                name: subscriptions
                port:
                  number: 80
